--- a/OpenShiftHelloWorld/package.json
+++ b/OpenShiftHelloWorld/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "HelloWorld",
+  "name":"",
   "version": "1.0.0",
   "engines": {
     "node": ">= 0.6.0",
@@ -13,14 +13,13 @@
   "private": true,
   "main": "app.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node app.js"
   },
   "license": "ISC",
-  "description": "The OpenShift `nodejs` cartridge documentation can be found at:",
   "devDependencies": {},
   "repository": {
     "type": "git",
-    "url": "ssh://55d46ef52d5271c222000179@helloworld-sathishg.rhcloud.com/~/git/helloworld.git/"
+    "url": ""
   },
   "author": "Sathish G. (sathish.gajendran@gmail.com)"
 }
